--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/k_dreyer" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kevinjdreyer/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/astrokd" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:kdreyerinseattle@gmail.com?Subject=Hello%20again" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
