--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Kevin</strong>, a student at <a href="https://www.codefellows.org/">CodeFellows</a><br />
+								and experienced technical professional.</h2>
+								<p>Software Developer | Technical Support Engineer | BIM Specialist | Technical Lead</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Portfolio</a>
 							</footer>
 
 						</div>
@@ -83,10 +82,8 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I'm interested in Virtual Desktops, cloud technology, VR and AR, Computer Aided Design, 
+							sensor technology, AI, computer human interaction, environmental protection, world peace</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -146,12 +143,15 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I’m a CodeFellows software development graduate.  
+							My background is in technical support, I have a lot of experience with supporting software for design, 
+							specifically designing buildings.  This experience has helped me develop my problem solving abilities, 
+							particularly in software but also computer systems and networks.  I have been in situations where 
+							I had to solve problems for teams trying to meet a deadline and troubleshoot outages of critical systems.  
+							All this experience has shown me how the right tools at the right time can really help really improve 
+							someone's work experience.  I hope to find a role where I can help create those tools.  
+							I’m particularly interested in Computer Aided Design tools, Virtualized desktops and software, 
+							cloud technology, and distributed systems.</p>
 
 						</div>
 					</section>
@@ -192,7 +192,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Kevin Dreyer. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
