--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/base.css" />
 		<link rel="stylesheet" href="assets/css/layout.css" />
 		<link rel="stylesheet" href="assets/css/modules.css" />
+		<link rel="stylesheet" href="assets/css/state.css" />
 	</head>
 	<body class="is-preload">
 
