--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Kevin</strong>, a student at <a href="https://www.codefellows.org/">CodeFellows</a><br />
 								and experienced technical professional.</h2>
-								<p>Software Developer | Technical Support Engineer | BIM Specialist | Technical Lead</p>
+								<p>Software Developer | Technical Support Engineer | BIM Specialist | Outdoor Enthusiast</p>
 							</header>
 
 							<footer>
