--- a/index.html
+++ b/index.html
@@ -199,11 +199,16 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+			<script src="https://cdn.jsdelivr.net/npm/jquery.scrolly@0.0.1/jquery.scrolly.js" integrity="sha256-GR8ZQMA56bzRVL9JGnkVKucJYxzZ9Eiqj9GcXtJ+ikk=" crossorigin="anonymous"></script>
+
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollex/0.2.1/jquery.scrollex.min.js" integrity="sha256-/CW3X7P8i0J1ZBO+OH4NemAoExJSg9I4RVGWHXPqeE4=" crossorigin="anonymous"></script>
+
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-browser/0.1.0/jquery.browser.min.js" integrity="sha256-R1IFHT0MWkbgu6vXgT4RE7TST4ROLDZRKtpRZeZ/Ke8=" crossorigin="anonymous"></script>
+
+			<script src="https://cdn.jsdelivr.net/npm/breakpoints-js@1.0.6/dist/breakpoints.min.js" integrity="sha256-SEslsNDFDC8ZkeKFQxKwRsXFXJjYw47YHG0EbZGgLlE=" crossorigin="anonymous"></script>
+
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
