removed burger menu in narrow displays

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
 			</div>
 
 		<!-- Scripts -->
+			<!-- <script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script> -->
+
 			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 			<script src="https://cdn.jsdelivr.net/npm/jquery.scrolly@0.0.1/jquery.scrolly.js" integrity="sha256-GR8ZQMA56bzRVL9JGnkVKucJYxzZ9Eiqj9GcXtJ+ikk=" crossorigin="anonymous"></script>
