--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<!-- <script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script> -->
+			<!-- <script src="assets/js/jquery.min.js"></script> -->
+			<!-- <script src="assets/js/jquery.scrolly.min.js"></script> -->
+			<!-- <script src="assets/js/jquery.scrollex.min.js"></script> -->
+			<!-- <script src="assets/js/browser.min.js"></script> -->
+			<script src="assets/js/breakpoints.min.js"></script>
 
 			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
@@ -213,7 +213,7 @@
 
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-browser/0.1.0/jquery.browser.min.js" integrity="sha256-R1IFHT0MWkbgu6vXgT4RE7TST4ROLDZRKtpRZeZ/Ke8=" crossorigin="anonymous"></script>
 
-			<script src="https://cdn.jsdelivr.net/npm/breakpoints-js@1.0.6/dist/breakpoints.min.js" integrity="sha256-SEslsNDFDC8ZkeKFQxKwRsXFXJjYw47YHG0EbZGgLlE=" crossorigin="anonymous"></script>
+			<!-- <script src="https://cdn.jsdelivr.net/npm/breakpoints-js@1.0.6/dist/breakpoints.min.js" integrity="sha256-SEslsNDFDC8ZkeKFQxKwRsXFXJjYw47YHG0EbZGgLlE=" crossorigin="anonymous"></script> -->
 
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
