--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://leetcode.com/kdreyerinseattle/" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>LeetCode profile</h3>
 										</header>
 									</article>
 									<article class="item">
