--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://glasscharlie.github.io/201-project-mars-trail/index.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>CodeFellows 201 project</h3>
 										</header>
 									</article>
 								</div>
@@ -111,9 +111,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://kdcinemaquest.herokuapp.com/" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>CodeFellows 301 project</h3>
 										</header>
 									</article>
 								</div>
